<resources>


    <!--AdMob Id-->
    <string name="admob_app_id" translatable="false">ca-app-pub-5557395638352451~8444714348</string>
    <string name="admob_banner_ad" translatable="false">ca-app-pub-5557395638352451/1879305999</string>
    <string name="admob_interstitial_ad" translatable="false">ca-app-pub-5557395638352451/2809244283</string>


    <!--Facebook Ads Id-->
    <string name="fb_placement_id" translatable="false">549167759165615_549192715829786</string>
    <string name="fb_placement_interstitial_id" translatable="false">549167759165615_549190905829967</string>

    <string name="upgrade_to_view_all_items">To recovery the files, please upgrade to premium!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_upgrade_to_pro_now">Upgrade to Pro Now</string>
    <string name="get_premium_free_today">GET PREMIUM FREE TODAY</string>
    <string name="recovery_and_no_ads">Deep Scan Recovery&amp;No Ads</string>
    <string name="loading">Loading…</string>
    <string name="note">This subscription gives you the unlimited access to the premium features.
        You can cancel it in Subscription on Google Play</string>

    <string name="app_name">Super Recovery</string>
    <string name="photo">Photo</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>

</resources>