<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/premium_image_view"
        android:layout_width="120.0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.0dip"
        android:layout_marginTop="5.0dip"
        android:layout_marginBottom="5.0dip"
        android:background="?selectableItemBackground"
        android:src="@drawable/ic_premium_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_image_view"
        android:layout_width="35.0dip"
        android:layout_height="35.0dip"
        android:layout_margin="5.0dip"
        android:background="?selectableItemBackground"
        android:padding="5.0dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_vector_close" />

    <TextView
        android:id="@+id/get_premium_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.0dip"
        android:layout_marginTop="40.0dip"
        android:text="@string/get_premium_free_today"
        android:textColor="@color/text_main"
        android:textSize="16.0sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close_image_view" />

    <TextView
        android:id="@+id/promote_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15.0dip"
        android:layout_marginTop="5.0dip"
        android:text="@string/recovery_and_no_ads"
        android:textColor="@color/text_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_premium_text_view" />

    <!--    <com.photorecovery.ui.view.CountDownView-->
    <!--        android:id="@+id/count_down_view"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginStart="15.0dip"-->
    <!--        android:layout_marginTop="18.0dip"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/promote_text_view" />-->

    <ImageView
        android:id="@+id/promote_image_view"
        android:layout_width="180.0dip"
        android:layout_height="0.0dip"
        android:layout_marginEnd="10.0dip"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/get_premium_text_view"
        app:srcCompat="@drawable/img_vector_woman" />

    <View
        android:id="@+id/view_white"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promote_image_view"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_upgrade_options"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30.0dip"
        android:layout_marginEnd="30.0dip"
        android:layout_marginBottom="72dp"
        app:layout_constraintBottom_toTopOf="@+id/subscription_tip_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subscription_tip_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30.0dip"
        android:layout_marginEnd="30.0dip"
        android:layout_marginBottom="14.0dip"
        android:gravity="center"
        android:textColor="@color/text_tip"
        android:textSize="10.0sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/v_loading_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_upgrade_options"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_upgrade_options">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_loading_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10.0dip"
            android:layout_marginBottom="10.0dip"
            android:text="@string/loading"
            android:textColor="@color/th_text_dark"
            android:textSize="14.0sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:id="@+id/note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/note"
        android:gravity="center"
        android:textSize="11dp"
        android:textColor="@color/text_main"
        app:layout_constraintBottom_toBottomOf="@+id/view_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/v_loading_price"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>